--- a/style.css
+++ b/style.css
@@ -1,65 +1,112 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
-header{
-    position: relative;
+header {
+  position: relative;
 }
-.logo{
+.logo {
+  height: 150px;
+  position: absolute;
+  top: 0;
+}
+li:hover {
+  color: rgb(49, 111, 70);
+  border-bottom: 2px solid rgb(49, 111, 70);
+  background-color: transparent;
+  margin: -1px;
+}
+
+.banner {
+  background-image: url(img/banner.jpg);
+  height: 600px;
+  background-attachment: fixed;
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
+}
+.textos-banner {
+  background-color: rgba(49, 111, 70, 0.952);
+  height: 200px;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -80px;
+}
+.textos-banner h1 {
+  font-family: "Dancing Script", cursive;
+  font-size: 74px;
+}
+.textos-banner h2 {
+  font-family: "Poiret One", cursive;
+  font-size: 42px;
+}
+
+@media (max-width: 768px) {
+  .logo {
+    height: 100px;
+    right: 10px;
+  }
+  .banner {
+    height: 500px;
+  }
+  .textos-banner {
     height: 150px;
-    position: absolute;
-    top: 0;
+  }
+  .textos-banner h1 {
+    font-size: 50px;
+  }
+  .textos-banner h2 {
+    font-size: 30px;
+  }
 }
-li:hover{
-    color: rgb(49, 111, 70);
-    border-bottom: 2px solid rgb(49, 111, 70);
-    background-color: transparent;
-    margin: -1px;
+.section-cards-all {
+  padding: 100px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-
-
-.banner{
-    background-image: url(img/banner.jpg);
-    height: 600px;
-    background-attachment: fixed;
-    background-size: cover;
-    display: flex;
-    align-items: flex-end;
+.section-card {
+  width: 340px;
+  height: 300px;
+  background-image: url(img/img-card-section.png);
+  border-radius: 60px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin: 10px 0;
 }
-.textos-banner{
-    background-color: rgba(49, 111, 70, 0.952);
-    height: 200px;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: -80px;
+.card-descricao {
+  background: #316f46;
+  opacity: 82%;
+  height: 70px;
+  border-radius: 0 0 60px 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.textos-banner h1{
-    font-family: 'Dancing Script', cursive;
-    font-size: 74px;
+section h3 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
 }
-.textos-banner h2{
-    font-family: 'Poiret One', cursive;
-    font-size: 42px;
+.newsletter {
+  background-image: url(img/newsletter.png);
+  width: 100%;
+  padding: 50px 0;
 }
-
-@media (max-width: 768px) { 
-    .logo{
-        height: 100px;
-        right: 10px;
-    }
-    .banner{
-        height: 500px;
-    }
-    .textos-banner{
-        height: 150px;
-    }
-    .textos-banner h1{
-        font-size: 50px;
-    }
-    .textos-banner h2{
-        font-size: 30px;
-    }
+.conteudo-newsletter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.newsletter-txt {
+  color: #fff;
+  text-align: center;
+}
+#email {
 }
