--- a/style.css
+++ b/style.css
@@ -96,17 +96,205 @@ section h3 {
 .newsletter {
   background-image: url(img/newsletter.png);
   width: 100%;
-  padding: 50px 0;
+  padding: 40px 0;
 }
 .conteudo-newsletter {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .newsletter-txt {
   color: #fff;
   text-align: center;
+  margin: 20px;
 }
 #email {
+  padding: 10px 70px 10px 20px;
+  border: none;
+  margin: 20px;
+}
+.btn-newsletter {
+  padding: 10px 60px;
+  border: none;
+  color: #316f46;
+  font-weight: 600;
+  margin: 20px;
+}
+main h1 {
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #316f46;
+  text-align: center;
+  padding: 30px;
+}
+article {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.card-oferta {
+  box-shadow: 0 0 16px 0px #0000111f;
+  margin-top: 10px;
+}
+.parte-branca {
+  text-align: center;
+  padding: 30px 50px;
+}
+.parte-branca h3 {
+  margin-bottom: 30px;
+}
+.parte-verde {
+  text-align: center;
+  padding: 20px 50px;
+  background-color: #316f46;
+  color: #fff;
+}
+.parte-verde span {
+  font-size: 40px;
+  font-weight: bold;
+}
+.galeria {
+  padding: 50px 0;
+}
+.parte1-galeria {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.parte1-galeria img {
+  width: 30%;
+}
+
+.img-lazer1 {
+  background-image: url(img/lazer1.png);
+  width: 400px;
+  height: 350px;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  margin: 10px;
+}
+.img-lazer2 {
+  background-image: url(img/lazer2.png);
+  width: 400px;
+  height: 350px;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  margin: 10px;
+}
+.img-lazer3 {
+  background-image: url(img/lazer3.png);
+  width: 400px;
+  height: 350px;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  margin: 10px;
+}
+.img-lazer4 {
+  background-image: url(img/lazer4.png);
+  width: 400px;
+  height: 350px;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  margin: 10px;
+}
+.img-lazer1:hover,
+.img-lazer2:hover,
+.img-lazer3:hover,
+.img-lazer4:hover {
+  opacity: 80%;
+}
+.sessao-lazer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.sobre {
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 50px 0;
+}
+.sobre-txt {
+  width: 40%;
+}
+.sobre-txt h3 {
+  font-weight: bold;
+  color: #316f46;
+}
+.sobre-txt img {
+  width: 30px;
+  margin: 10px;
+}
+.txt-tel {
+  display: flex;
+  align-items: center;
+}
+.sobre-maps {
+  text-align: center;
+}
+.sobre-maps button {
+  border: none;
+  background: transparent;
+  color: #316f46;
+  font-weight: bold;
+}
+.footer-parte1 {
+  padding: 20px 0;
+  background: #316f46;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.footer-parte2 {
+  background-color: #549d6d;
+  padding: 21px;
+  text-align: center;
+  color: #fff;
+}
+@media (max-width: 600px) {
+  .sobre-txt {
+    width: 80%;
+  }
+  .mapss {
+    width: 300px;
+    height: 200px;
+  }
+  .parte1-logo img {
+    width: 150px;
+  }
+  .redes {
+    text-align: center;
+  }
+  .redes img {
+    width: 40px;
+  }
 }
