--- a/PIM_/PIM_/Views/Shared/_Layout.cshtml
+++ b/PIM_/PIM_/Views/Shared/_Layout.cshtml
@@ -10,8 +10,13 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poiret+One&display=swap" rel="stylesheet" />
 </head>
-<body>   
-      @RenderBody()
+<body>  
+    @RenderBody()
+    <div id="login">
+        @RenderSection("login")
+    </div>
+     
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
