Ajuste fix de links e css

--- a/PIM_/PIM_/Views/Cadastro/Index.cshtml
+++ b/PIM_/PIM_/Views/Cadastro/Index.cshtml
@@ -1,32 +1,40 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Excellencia Hotel";
 }
 
-<div class="banner">
+<head>
+    <link rel="stylesheet" href="@Url.Content("~/css/cadastro.css")" />
+</head>
+<body>
+    <div class="banner-cadastro">
 
-    <div class="modal-registro">
+        <div class="modal-registro">
 
-        <h1>CRIE UMA CONTA</h1>
-        <div class="form">
-            <div>
+            <h1>CRIE UMA CONTA</h1>
+            <div class="form">
+                <div>
 
-                <input type="text" placeholder="Nome" />
-            </div>
-            <div>
+                    <input type="text" placeholder="Nome" />
+                </div>
+                <div>
 
-                <input type="email" placeholder="E-mail" />
-            </div>
-            <div>
+                    <input type="email" placeholder="E-mail" />
+                </div>
+                <div>
 
-                <input type="password" placeholder="Senha" />
-            </div>
-            <div class="button-entrar">
-                <button>CONFIRMAR</button>
-            </div>
-            <div class="fazer-login">
-                <p>Ja tem Conta?</p>
-                <span>Fazer Login</span>
+                    <input type="password" placeholder="Senha" />
+                </div>
+                <div class="button-entrar">
+                    <button>CONFIRMAR</button>
+                </div>
+                <div class="fazer-login">
+                    <p>Ja tem Conta?</p>
+                    <span>Fazer Login</span>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</body>
+
