--- a/PIM_/PIM_/wwwroot/css/cadastro.css
+++ b/PIM_/PIM_/wwwroot/css/cadastro.css
@@ -1,6 +1,6 @@
 ﻿
-.banner {
-    background-image: url(img/banner-cadastro.png);
+.banner-cadastro {
+    background-image: url(../image/banner-cadastro.png);
     height: 100vh;
     background-attachment: fixed;
     background-size: cover;
@@ -9,55 +9,55 @@
     justify-content: center;
 }
 
-    .banner .modal-registro {
+    .banner-cadastro .modal-registro {
         width: 464px;
         padding: 30px 0;
         background-color: white;
     }
 
-        .banner .modal-registro h1 {
+        .banner-cadastro .modal-registro h1 {
             font-size: 30px;
             text-align: center;
             color: #316f46;
         }
 
-.modal-registro .form {
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding-top: 20px;
-}
+        .banner-cadastro .modal-registro .form {
+            width: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            padding-top: 20px;
+        }
 
-    .modal-registro .form input {
-        border: none;
-        border-bottom: 2px solid #316f46;
-        outline: none;
-        padding: 10px;
-        width: 340px;
-    }
+            .banner-cadastro .modal-registro .form input {
+                border: none;
+                border-bottom: 2px solid #316f46;
+                outline: none;
+                padding: 10px;
+                width: 340px;
+            }
 
-.modal-registro .button-entrar button {
-    background-color: rgba(49, 111, 70, 0.82);
-    width: 260px;
-    height: 40px;
-    border: none;
-    color: white;
-    font-weight: bold;
-}
+        .banner-cadastro .modal-registro .button-entrar button {
+            background-color: rgba(49, 111, 70, 0.82);
+            width: 260px;
+            height: 40px;
+            border: none;
+            color: white;
+            font-weight: bold;
+        }
 
-input::placeholder {
+.banner-cadastro input::placeholder {
     color: #316f46;
     font-weight: bold;
 }
 
-.fazer-login {
-    color: #316f46;
-    display: flex;
-}
-
-    .fazer-login span {
-        font-weight: bold;
+    .banner-cadastro .fazer-login {
+        color: #316f46;
+        display: flex;
     }
+
+        .banner-cadastro .fazer-login span {
+            font-weight: bold;
+        }
