--- a/PIM_/PIM_/wwwroot/css/login.css
+++ b/PIM_/PIM_/wwwroot/css/login.css
@@ -1,5 +1,5 @@
-﻿.banner {
-    background-image: url(img/banner-login.png);
+﻿.banner-login {
+    background-image: url(../image/banner-login.png);
     height: 100vh;
     background-attachment: fixed;
     background-size: cover;
@@ -8,19 +8,19 @@
     justify-content: center;
 }
 
-    .banner .modal-registro {
+    .banner-login .modal-registro {
         width: 464px;
         background-color: white;
         padding: 30px 0;
     }
 
-        .banner .modal-registro h1 {
+        .banner-login .modal-registro h1 {
             font-size: 30px;
             text-align: center;
             color: #316f46;
         }
 
-.modal-registro .form {
+.banner-login .modal-registro .form {
     width: 100%;
     position: relative;
     display: flex;
@@ -30,7 +30,7 @@
     padding-top: 20px;
 }
 
-    .modal-registro .form input {
+    .banner-login .modal-registro .form input {
         border: none;
         border-bottom: 2px solid #316f46;
         outline: none;
@@ -38,7 +38,7 @@
         width: 340px;
     }
 
-.modal-registro .button-entrar button {
+.banner-login .modal-registro .button-entrar button {
     background-color: rgba(49, 111, 70, 0.82);
     width: 260px;
     height: 40px;
@@ -47,22 +47,22 @@
     font-weight: bold;
 }
 
-input::placeholder {
+.banner-login input::placeholder {
     color: #316f46;
     font-weight: bold;
     padding-top: 10px;
 }
 
-.fazer-login {
+.banner-login .fazer-login {
     color: #316f46;
     display: flex;
 }
 
-    .fazer-login span {
+    .banner-login .fazer-login span {
         font-weight: bold;
     }
 
-.esqueci-senha {
+.banner-login .esqueci-senha {
     margin-right: 220px;
     padding-top: 1px;
     margin-top: -15px;
