Adicionando páginas de checkin e de perfil

--- a/PIM_/PIM_/Views/Login/Index.cshtml
+++ b/PIM_/PIM_/Views/Login/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <span class="esqueci-senha">Esqueci a Senha</span>
                 <div class="button-entrar">
-                    <button>ENTRAR</button>
+                    <a class="btn btn-success" href="/Favoritos">ENTRAR</a>
                 </div>
                 <div class="fazer-login">
                     <p>Não tem conta?</p>
