--- a/PIM_/PIM_/Views/Shared/_Layout.cshtml
+++ b/PIM_/PIM_/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         <a class="nav-link" aria-current="page" href="/Home">Home</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Acomodações</a>
+                        <a class="nav-link" aria-current="page" href="/Quartos">Acomodações</a>
                     </li>
                     <li class="nav-item px-2">
                         <a class="nav-link" aria-current="page" href="#">Lazer</a>
