--- a/PIM_/PIM_/Views/Login/Index.cshtml
+++ b/PIM_/PIM_/Views/Login/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Excellencia Hotel";
+
 }
 
 <head>
@@ -9,23 +10,20 @@
     <div class="banner-login">
         <div class="modal-registro">
             <h1>LOGIN</h1>
-            <div class="form">
-                <div>
-                    <input type="email" placeholder="E-mail" />
-                </div>
-                <div>
-
-                    <input type="password" placeholder="Senha" />
-                </div>
+            <form asp-action="Verificar" method="post" class="form">
+                <input type="email" name="email" placeholder="E-mail" />
+                <input type="password" name="senha" placeholder="Senha" />
                 <span class="esqueci-senha">Esqueci a Senha</span>
                 <div class="button-entrar">
-                    <a class="btn btn-success" href="/Favoritos">ENTRAR</a>
+                   <input type="submit" class="btn btn-success" value="LOGIN"/>              
+                   @* <a class="btn btn-success">ENTRAR</a>*@
                 </div>
                 <div class="fazer-login">
                     <p>Não tem conta?</p>
                     <span>Criar conta</span>
                 </div>
-            </div>
+            </form>
+
         </div>
     </div>
 </body>
