add telas de perfil

--- a/PIM_/PIM_/Views/Login/Erro.cshtml
+++ b/PIM_/PIM_/Views/Login/Erro.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     ViewData["Title"] = "Erro";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_padrao404.cshtml";
 }
 
-<h1>Erro</h1>
+<h1 class="erro-h1 text-center success m-5">Página 404</h1>
 
