--- a/PIM_/PIM_/Views/_padrao404.cshtml
+++ b/PIM_/PIM_/Views/_padrao404.cshtml
@@ -38,19 +38,9 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <div class="dropdown">
-                        <button class="btn btn-success me-2 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Meu perfil
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <!--  <li><a class="dropdown-item" href="/Login/">Meus dados</a></li>-->
-                            <li><a class="dropdown-item" href="/MinhaReserva">Minha Reserva</a></li>
-                            <li><a class="dropdown-item" href="/Favoritos">Favoritos</a></li>
-                        </ul>
-                    </div>
-                    <a class="btn btn-outline-success" href="/Home">Sair</a>
+                    <a class="btn btn-success me-2" href="/Login">Meu perfil</a>
+                    <a class="btn btn-outline-success" href="/Cadastro">Sair</a>
                 </form>
-                
             </div>
         </div>
     </header>
