--- a/PIM_/PIM_/wwwroot/css/login.css
+++ b/PIM_/PIM_/wwwroot/css/login.css
@@ -69,3 +69,9 @@
     font-size: 14px;
     color: #316f46;
 }
+
+ h1 .erro-h1 {
+        text-align: center;
+        font-size: 50px;
+        padding: 131px;
+ }
