--- a/PIM_/PIM_/Views/Shared/_Layout.cshtml
+++ b/PIM_/PIM_/Views/Shared/_Layout.cshtml
@@ -28,13 +28,13 @@
                         <a class="nav-link" aria-current="page" href="/Quartos">Acomodações</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Lazer</a>
+                        <a class="nav-link" aria-current="page" href="#lazer">Lazer</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Galeria</a>
+                        <a class="nav-link" aria-current="page" href="#galeria">Galeria</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Contato</a>
+                        <a class="nav-link" aria-current="page" href="#contato">Contato</a>
                     </li>
                 </ul>
                 <form class="d-flex">
