--- a/PIM_/PIM_/wwwroot/css/site.css
+++ b/PIM_/PIM_/wwwroot/css/site.css
@@ -80,10 +80,32 @@ li:hover {
     flex-wrap: wrap;
 }
 
-.section-card {
+#img1section {
     width: 340px;
     height: 300px;
-    background-image: url(../image/img-card-section.png);
+    background-image: url(../image/slidequartofamilia.png);
+    border-radius: 60px;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin: 10px 0;
+}
+#img2section {
+    width: 340px;
+    height: 300px;
+    background-image: url(../image/slidequartoluxo.png);
+    border-radius: 60px;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin: 10px 0;
+}
+#img3section {
+    width: 340px;
+    height: 300px;
+    background-image: url(../image/slidequartocasal.png);
     border-radius: 60px;
     background-repeat: no-repeat;
     display: flex;
