--- a/PIM_/PIM_/Views/Login/MinhaPagina.cshtml
+++ b/PIM_/PIM_/Views/Login/MinhaPagina.cshtml
@@ -4,6 +4,26 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h1>MinhaPagina</h1>
+<head>
+    <link rel="stylesheet" href="@Url.Content("~/css/minhapagina.css")" />
+</head>
 
+<body>
+    <div class="banner-minha-pagina">
+        <h2 class="h2 fw-bolder">Meus Dados</h2>
+    </div>
+
+    <div class="dados">
+        <h1>Seja - Bem Vindo(a), Nome</h1>
+        <a class="quadrado" href="/DadosPessoais">
+            <p>Meus Dados</p>
+        </a>
+        <a class="quadrado" href="/Favoritos">
+            <p> Favoritos</p>
+        </a>
+        <a class="quadrado" href="/MinhaReserva">
+            <p>Minha Reserva</p>
+        </a>
+    </div>
+</body>
 
