--- a/PIM_/PIM_/Views/Quartos/Index.cshtml
+++ b/PIM_/PIM_/Views/Quartos/Index.cshtml
@@ -39,7 +39,7 @@
                                     <h5 class="card-title">@item.Nome</h5>
                                     <p class="card-text">@item.Descricao</p>
                                     <p class="card-text">@item.Preco</p>
-                                    <a href="/CheckInDatas" class="btn btn-success stretched-link">Ver Mais</a>
+                                    <a href="/DetalhesQuarto" class="btn btn-success stretched-link">Ver Mais</a>
                                     <button type="button" class="btn btn-outline-danger">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
