--- a/PIM_/PIM_/Views/_Layout.cshtml
+++ b/PIM_/PIM_/Views/_Layout.cshtml
@@ -28,22 +28,22 @@
                         <a class="nav-link" aria-current="page" href="/Quartos">Acomodações</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Lazer</a>
+                        <a class="nav-link" aria-current="page" href="/Home/#lazer">Lazer</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Galeria</a>
+                        <a class="nav-link" aria-current="page" href="/Home/#galeria">Galeria</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" aria-current="page" href="#">Contato</a>
+                        <a class="nav-link" aria-current="page" href="/Home/#contato">Contato</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <div class="dropdown">
                         <button class="btn btn-success me-2 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             Meu perfil
-                        </button>
+                        </button>         
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <!--  <li><a class="dropdown-item" href="/Login/">Meus dados</a></li>-->
+                            <li><a class="dropdown-item" href="/DadosPessoais">Meus dados</a></li>
                             <li><a class="dropdown-item" href="/MinhaReserva">Minha Reserva</a></li>
                             <li><a class="dropdown-item" href="/Favoritos">Favoritos</a></li>
                         </ul>
