--- a/PIM_/PIM_/wwwroot/css/checkin.css
+++ b/PIM_/PIM_/wwwroot/css/checkin.css
@@ -19,7 +19,7 @@ li:hover {
     margin: -1px;
 }
 
-.banner-check, .banner-fav, .banner-reserva {
+.banner-check, .banner-fav, .banner-reserva, .banner-minha-pagina, .banner-dados-pessoais {
     background-image: url(../image/banner-check.png);
     padding: 50px;
     background-attachment: fixed;
