fix de comentários e ajuste de texto

--- a/PIM_/PIM_/Views/DetalhesQuarto/Index.cshtml
+++ b/PIM_/PIM_/Views/DetalhesQuarto/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="info-quarto">
         <div class="container">
             <div class="infos">
-                <p>Lorem Ipsum is simply dummy text of<br> printing and typesetting industry.</p>
+                <p>Contém duas camas de solteiro, uma cama de casal, possui 1 berço e 2 banheiro.</p>
                 <div class="info-suite">
                     <div class="info1">
                         <img src="~/image/camas.png" alt="icone cama">
