--- a/PIM_/PIM_/Views/Home/Index.cshtml
+++ b/PIM_/PIM_/Views/Home/Index.cshtml
@@ -53,41 +53,41 @@
             <article>
                 <div class="card-oferta">
                     <div class="parte-branca">
-                        <h3>Lorem Ipsum</h3>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
+                        <h3>Quarto Família</h3>
+                        <p>5 Dias com tudo incluso </p>
+                        <p>2 Quartos</p>
+                        <p>Todo lazer disponível</p>
+                        <p>Venha Curtir</p>
                     </div>
                     <div class="parte-verde">
-                        <h3>Lorem Ipsum</h3>
-                        <span>R$ 00,00</span>
+                        <h3>Valor</h3>
+                        <span>R$ 299,99</span>
                     </div>
                 </div>
                 <div class="card-oferta">
                     <div class="parte-branca">
-                        <h3>Lorem Ipsum</h3>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
+                        <h3>Quarto Casal</h3>
+                        <p>3 Dias com tudo incluso </p>
+                        <p>1 Quarto</p>
+                        <p>Todo lazer disponível</p>
+                        <p>Venha Curtir</p>
                     </div>
                     <div class="parte-verde">
-                        <h3>Lorem Ipsum</h3>
-                        <span>R$ 00,00</span>
+                        <h3>Valor</h3>
+                        <span>R$ 89,90</span>
                     </div>
                 </div>
                 <div class="card-oferta">
                     <div class="parte-branca">
-                        <h3>Lorem Ipsum</h3>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
-                        <p>is simply dummy </p>
+                        <h3>Quarto Amigos</h3>
+                        <p>5 Dias com tudo incluso </p>
+                        <p>1 Quarto com 4 camas</p>
+                        <p>Todo lazer disponível</p>
+                        <p>Venha Curtir</p>
                     </div>
                     <div class="parte-verde">
-                        <h3>Lorem Ipsum</h3>
-                        <span>R$ 00,00</span>
+                        <h3>Valor</h3>
+                        <span>R$ 200,00</span>
                     </div>
                 </div>
             </article>
@@ -125,7 +125,9 @@
             <div class="sobre" id="contato">
                 <div class="sobre-txt">
                     <h3>Sobre nós</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+                    scrambled it to make a type specimen book. </p>
                     <div class="txt-tel">
                         <img src="~/image/tel.png" alt="tel" />
                         <p>55 11 925416325</p>
