--- a/PIM_/PIM_/Views/Quartos/Index.cshtml
+++ b/PIM_/PIM_/Views/Quartos/Index.cshtml
@@ -86,7 +86,7 @@
                             Quarto com Hidromassagem, perfeito para o casal, venha e aproveite! Quarto superior com 1 cama de casal
                             Banheiro equipado com secador de cabelo, espelho de aumento e kit de amenities.
                         </p>
-                        <a href="#" class="btn btn-success">Ver Mais</a>
+                        <a href="/DetalhesQuarto" class="btn btn-success">Ver Mais</a>
                         <button type="button" class="btn btn-outline-danger">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
@@ -105,7 +105,7 @@
                             Apartamento Luxo com três camas de solteiro. Este apartamento foi totalmente reformulado com decoração moderna,
                             piso frio, possui cozinha equipada com microondas, cook top com duas bocas e armários com utensilio
                         </p>
-                        <a href="#" class="btn btn-success">Ver Mais</a>
+                        <a href="/DetalhesQuarto" class="btn btn-success">Ver Mais</a>
                         <button type="button" class="btn btn-outline-danger">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
@@ -121,7 +121,7 @@
                     <iv class="col-md-6 p-4 ps-md-0">
                         <h5 class="mt-0">Quarto Adaptado</h5>
                         <p>Apartamento superior com uma cama de casal adaptado para portadores de necessidades especiais.</p>
-                        <a href="#" class="btn btn-success">Ver Mais</a>
+                        <a href="/DetalhesQuarto" class="btn btn-success">Ver Mais</a>
                         <button type="button" class="btn btn-outline-danger">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
